--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,16 @@
-# Версия docker-compose
+# docker-compose.yml
 version: '3'
 
-# Перечень volume
 volumes:
   pg_data:
   static:
 
-# Перечень контейнеров
 services:
   db:
-    image: postgres:13.10
+    image: postgres:13
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
-
   backend:
     build: ./backend/
     env_file: .env
@@ -29,7 +26,6 @@ services:
 
   gateway:
     build: ./nginx/
-    # build: ./gateway/
     env_file: .env
     volumes:
       - static:/staticfiles
